--- a/Document Management Solution/Document Manager.csproj
+++ b/Document Management Solution/Document Manager.csproj
@@ -137,6 +137,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DbHelper.cs" />
+    <Compile Include="Migrations\201901181419374_InitialCreate.cs" />
+    <Compile Include="Migrations\201901181419374_InitialCreate.Designer.cs">
+      <DependentUpon>201901181419374_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901181457459_add DocumentId column.cs" />
+    <Compile Include="Migrations\201901181457459_add DocumentId column.Designer.cs">
+      <DependentUpon>201901181457459_add DocumentId column.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DocManagerContext.cs" />
     <Compile Include="Models\DocumentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -193,6 +202,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901181419374_InitialCreate.resx">
+      <DependentUpon>201901181419374_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901181457459_add DocumentId column.resx">
+      <DependentUpon>201901181457459_add DocumentId column.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
