Reoorganised UploadDocument and CreateDocument, so that website stuff is in the controller. Wrote unit test for CreateDocument

--- a/Document ManagerTests/Document ManagerTests.csproj
+++ b/Document ManagerTests/Document ManagerTests.csproj
@@ -76,6 +76,11 @@
       <Name>Document Manager</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TextFile1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
