Created view DocumentSearchPage and DocumentUploadPage adding functionality to latter

--- a/Document Management Solution/Document Manager.csproj
+++ b/Document Management Solution/Document Manager.csproj
@@ -190,6 +190,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\DocumentSearchPage.cshtml" />
+    <Content Include="Views\Home\DocumentUploadPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
