--- a/Document Management Solution/Web.config
+++ b/Document Management Solution/Web.config
@@ -19,7 +19,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="102400" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -62,6 +62,11 @@
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="104857600"/>
+      </requestFiltering>
+    </security>
   </system.webServer>
   <system.codedom>
     <compilers>
