Seperate web model (does not include file) that allows quicker DocumentSearchPage loading

--- a/Document Management Solution/Document Manager.csproj
+++ b/Document Management Solution/Document Manager.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DocManagerContext.cs" />
     <Compile Include="Models\DocumentModel.cs" />
+    <Compile Include="Models\WebDocumentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
